--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,13 +58,14 @@ body::-webkit-scrollbar-thumb {
 
 }
 
+
+
 .PriceListWrapperMobile{
   background-image: linear-gradient(to bottom, #f8c487 -8%, #f5bc79, #f3b56c, #f0ad5f, #eda551);
 }
 
 
-.PriceListWrapper,
-.footerWrapper {
+.PriceListWrapper {
   background-image: linear-gradient(to bottom, #eda551);
 }
 
@@ -106,22 +107,28 @@ body::-webkit-scrollbar-thumb {
 }
 .rellsOverlay {
   position: relative;
+  width: 100%;
 }
-.rellsOverlay::before {
+.reelsPreview {
+  filter: brightness(65%);
+}
+
+.reelsPreview::after,
+.reelsPreview::before {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  content: "2@";
+  width: 100%;
+  height: 100%;
+  z-index: 433;
+  color: red;
 }
 
 
 @media (width<500px){
-  .slick-next::before {
+  .slick-next {
     display: none;
   }
-  .slick-prev::before {
+  .slick-prev {
    display: none;
   }
   .actionBtnWrapper {
